Add OpenDyslexic font support, reader font macro

--- a/DoxOnBox/DoxOnBox-Info.plist
+++ b/DoxOnBox/DoxOnBox-Info.plist
@@ -45,5 +45,12 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>UIAppFonts</key>
+	<array>
+		<string>OpenDyslexic-Regular.otf</string>
+		<string>OpenDyslexic-Bold.otf</string>
+		<string>OpenDyslexic-Italic.otf</string>
+		<string>OpenDyslexic-BoldItalic.otf</string>
+	</array>
 </dict>
 </plist>
